# INF1761-trabs

./: README.md
t1/: CMakeLists.txt
t1/src/: image.h  imageloader.cpp  main.cpp  pixel.h  superpixel.h  superpixelfilter.cpp  superpixelfilter.h
t2/: CMakeLists.txt
t2/models/: icosaedro.txt  triangle.off
t2/shaders/: example.frag  example.vert  fragmentlight.frag  fragmentlight.vert  vertexlight.vert
t2/src/: GraphicsShader.cpp  Vec3.h  main.cpp
t3/: CMakeLists.txt  README.md
t3/scenes/: room.rt5
t3/src/: image.cpp  image.h  main.cpp  pixel.cpp  pixel.h  rt5.cpp  rt5.h  vec3.h
